--- a/style.css
+++ b/style.css
@@ -1,42 +1,52 @@
+body, html {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
 #main{
-    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     
     
 }
 
 #navbar-div{
     width: 100%;
-    height: 9vh;
+    height:7%;
 }
 
 #task-body-div{
     width: 100%;
     padding: 10px;
-    height: 81vh;
-    overflow: hidden;
-    overflow-y: scroll;
+    height: 85%;
+    background-color: blue;
+    /* overflow-y: hidden , scroll; */ 
 }
 
 #footer-div{
     width: 100%;
     padding: 10px;
     background-color: rgb(238, 238, 238);
-    height: 10vh;
+    height: 8%;
     display: flex;
     justify-content: space-between;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-#new-tast-perent-div{
+#footer-child{
+    background-color: blue;
+    width: 600px;
+    height: auto;
+}
+
+#new-task-div{
+    display: flex , none ;
     position: sticky;
     top: 38%;
-    display: none;
-}
-
-#new-task-child-div{
-    display: flex ;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
     border: 1px solid rgb(179, 179, 179);
     padding-bottom: 7px;
@@ -85,8 +95,24 @@
 }
 
 #new-add-btn{
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     position: relative;
     bottom: 2.3rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding-top: 6px;
+    border-radius: 10px;
+    background-color: rgb(6, 6, 112);
+    color: white;
+       
+}
+
+#new-add-btn-p{
+    font-weight: 900;
+    font-size: 40px;
+    border-radius: 10%;
+    align-items: center;
 }
