--- a/style.css
+++ b/style.css
@@ -99,9 +99,10 @@ body, html {
     height: 50px;
     position: relative;
     bottom: 2.3rem;
+    font-size: 30px;
+    align-items: center;
     display: flex;
     justify-content: center;
-    text-align: center;
     align-items: center;
     padding-top: 6px;
     border-radius: 10px;
@@ -111,7 +112,10 @@ body, html {
 }
 
 #new-add-btn-p{
-    font-weight: 900;
+    position: relative;
+    top: 2px;
+    font-weight: 600;
+    text-align: center;
     font-size: 40px;
     border-radius: 10%;
     align-items: center;
