--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body, html {
     width: 100%;
     padding: 10px;
     height: 85%;
-    background-color: blue;
+    background-color: white;
     /* overflow-y: hidden , scroll; */ 
 }
 
@@ -44,7 +44,7 @@ body, html {
 
 #new-task-div{
     display: flex , none ;
-    position: sticky;
+    position: fixed;
     top: 38%;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -119,4 +119,10 @@ body, html {
     font-size: 40px;
     border-radius: 10%;
     align-items: center;
+}
+
+#tasklist{
+    width: 100%;
+    height: 100%;
+   
 }
