--- a/style.css
+++ b/style.css
@@ -21,13 +21,15 @@ body, html {
     width: 100%;
     padding: 10px;
     height: 85%;
-    background-color: white;
+    background-color: rgb(236, 0, 0);
     /* overflow-y: hidden , scroll; */ 
 }
 
 #footer-div{
     width: 100%;
     padding: 10px;
+    position: fixed;
+    bottom: 0;
     background-color: rgb(238, 238, 238);
     height: 8%;
     display: flex;
@@ -44,8 +46,9 @@ body, html {
 
 #new-task-div{
     display: flex , none ;
-    position: fixed;
-    top: 38%;
+    position: absolute;
+    top: calc(50% -15px);
+    width: 300px;
     justify-content: space-between;
     flex-wrap: wrap;
     border: 1px solid rgb(179, 179, 179);
