--- a/style.css
+++ b/style.css
@@ -1,131 +1,100 @@
-body, html {
-    height: 100%;
+body {
     margin: 0;
-    overflow: hidden;
+    padding: 0;
 }
 
-#main{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    
-    
+#main {
+    width: 100vw;
+    height: 100vh;
 }
 
-#navbar-div{
-    width: 100%;
-    height:7%;
-}
+#navbar {
 
-#task-body-div{
-    width: 100%;
-    padding: 10px;
-    height: 85%;
-    background-color: rgb(236, 0, 0);
-    /* overflow-y: hidden , scroll; */ 
-}
-
-#footer-div{
-    width: 100%;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    background-color: rgb(238, 238, 238);
-    height: 8%;
     display: flex;
     justify-content: space-between;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-#footer-child{
-    background-color: blue;
-    width: 600px;
-    height: auto;
-}
-
-#new-task-div{
-    display: flex , none ;
-    position: absolute;
-    top: calc(50% -15px);
-    width: 300px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    border: 1px solid rgb(179, 179, 179);
-    padding-bottom: 7px;
-    border-radius: 8px;
-    width: auto;
-    height: max-content;
-    padding-bottom: 0.8rem;
-}
-
-#new-task-input{
-    height: 60px;
-    margin: 3px;
-    width: 100%;
-    border-top-left-radius:8px;
-    border-top-right-radius:8px;
-    border-top: 2px solid white;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
-    border-bottom: 2px solid rgb(218, 218, 218);
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    
-}
-
-#task-cancel-btn{
-    margin-top: 0.8rem;
-    width: 95PX;
-    height: 40PX;
-    border-radius: 8PX;
-    background-color: rgb(15, 15, 131);
-    color: white;
-    font-weight: 600;
-    font-size: 18px;
-}
-
-#task-add-btn{
-    margin-top: 0.8rem;
-    width: 95PX;
-    height: 40PX;
-    border-radius: 8PX;
-    background-color: rgb(15, 15, 131);
-    color: white;
-    font-weight: 600;
-    font-size: 18px;
-}
-
-#new-add-btn{
-    width: 50px;
-    height: 50px;
-    position: relative;
-    bottom: 2.3rem;
-    font-size: 30px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     align-items: center;
+    text-align: center;
+    color: aliceblue;
+    width: 100%;
+    height: 60px;
+    background-color: rgb(15, 83, 151);
+}
+
+#nav_drop-btn {
+    font-weight: 900;
+    background-color: aliceblue;
+    color: rgb(22, 112, 202);
+    ;
+    width: 70px;
+    padding: 0.3rem;
+    border-radius: 8px;
+}
+
+#footer {
+    width: 100%;
+    height: 40px;
+    background-color: rgb(234, 234, 234);
+    text-align: right;
+    padding-right: 1rem;
+
+}
+
+#new_task_btn {
+    text-align: center;
+    align-items: center;
+    border-radius: 5px;
+    padding: 6px;
+    padding-left: 8px;
+    padding-right: 8px;
+    position: relative;
+    bottom: 25px;
+    background-color: rgb(15, 83, 151);
+    color: white;
+    font-weight: 600;
+    border: 2px solid white;
+    box-shadow: 2px 3px 3px gray;
+}
+
+#task_body_main {
+    overflow: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    height: calc(100vh - 100px);
+    background-color: black;
+   
+}
+
+#task_body_items {
+    display: block;
+    padding: 8px;
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
+    overflow: hidden;
+    overflow-y: scroll;
+
+}
+
+#new_task_body_main{
+    display: none;
+    background-color: brown;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-top: 6px;
-    border-radius: 10px;
-    background-color: rgb(6, 6, 112);
-    color: white;
-       
-}
-
-#new-add-btn-p{
-    position: relative;
-    top: 2px;
-    font-weight: 600;
+    position: fixed;
+    top: 50vh;
     text-align: center;
-    font-size: 40px;
-    border-radius: 10%;
-    align-items: center;
+    padding-left: 20vw;
+    padding-right: vw;
+    width: 100%;
+    height: auto;  
 }
 
-#tasklist{
+#new_task_body_child{
+    display: none;
+}
+
+#new-task_input{
     width: 100%;
-    height: 100%;
-   
 }
