--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 #navbar {
 
-    display: flex;
+    display: flex,;
     justify-content: space-between;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -62,7 +62,7 @@ body {
     overflow-y: scroll;
     width: 100%;
     height: calc(100vh - 100px);
-    background-color: black;
+    
    
 }
 
@@ -71,7 +71,6 @@ body {
     padding: 8px;
     width: 100%;
     height: 100%;
-    background-color: aqua;
     overflow: hidden;
     overflow-y: scroll;
 
